; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/cd/extr_cell_map.c_cell_map.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/cd/extr_cell_map.c_cell_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @cell_map to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cell_map(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = ashr i32 %5, 12
  %7 = and i32 %6, 7
  switch i32 %7, label %37 [
    i32 0, label %8
    i32 1, label %8
    i32 2, label %8
    i32 3, label %8
    i32 4, label %13
    i32 5, label %13
    i32 6, label %20
    i32 7, label %27
  ]

8:                                                ; preds = %1, %1, %1, %1
  %9 = load i32, i32* %2, align 4
  %10 = ashr i32 %9, 8
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %2, align 4
  %12 = and i32 %11, 255
  store i32 %12, i32* %4, align 4
  br label %38

13:                                               ; preds = %1, %1
  %14 = load i32, i32* %2, align 4
  %15 = ashr i32 %14, 7
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* %2, align 4
  %17 = and i32 %16, 127
  store i32 %17, i32* %4, align 4
  %18 = load i32, i32* %4, align 4
  %19 = or i32 %18, 256
  store i32 %19, i32* %4, align 4
  br label %38

20:                                               ; preds = %1
  %21 = load i32, i32* %2, align 4
  %22 = ashr i32 %21, 6
  store i32 %22, i32* %3, align 4
  %23 = load i32, i32* %2, align 4
  %24 = and i32 %23, 63
  store i32 %24, i32* %4, align 4
  %25 = load i32, i32* %4, align 4
  %26 = or i32 %25, 384
  store i32 %26, i32* %4, align 4
  br label %38

27:                                               ; preds = %1
  %28 = load i32, i32* %2, align 4
  %29 = ashr i32 %28, 5
  store i32 %29, i32* %3, align 4
  %30 = load i32, i32* %2, align 4
  %31 = and i32 %30, 31
  store i32 %31, i32* %4, align 4
  %32 = load i32, i32* %2, align 4
  %33 = and i32 %32, 30720
  %34 = ashr i32 %33, 6
  %35 = load i32, i32* %4, align 4
  %36 = or i32 %35, %34
  store i32 %36, i32* %4, align 4
  br label %38

37:                                               ; preds = %1
  store i32 0, i32* %4, align 4
  store i32 0, i32* %3, align 4
  br label %38

38:                                               ; preds = %37, %27, %20, %13, %8
  %39 = load i32, i32* %3, align 4
  %40 = and i32 %39, 63
  %41 = load i32, i32* %4, align 4
  %42 = mul nsw i32 %41, 64
  %43 = add nsw i32 %40, %42
  ret i32 %43
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
